--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.2",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "colorthief": "^2.6.0",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
