--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/headerstsx"
+    "src/components/headerstsx",
+    "next-sitemap.config.js"
   ],
   "exclude": ["node_modules"]
 }
