--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-sitemap": "^4.2.3",
@@ -34,6 +36,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
